--- a/.github/workflows/my-first-workflow.yml
+++ b/.github/workflows/my-first-workflow.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v3
 
-    - name: Use Node.js 20
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: latest
 
     - name: Print a message
       run: echo "Hello, world!"
