--- a/.github/workflows/parallel-job-example.yml
+++ b/.github/workflows/parallel-job-example.yml
@@ -31,12 +31,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-      - name: Print a message for main branch
-        if: github.ref == 'refs/heads/main'
-        run: echo "This is the main branch."
-      - name: Print a message for non-main branches
-        if: github.ref != 'refs/heads/main'
-        run: echo "This is not the main branch."
+      - name: Print a message for master branch
+        if: github.ref == 'refs/heads/master'
+        run: echo "This is the master branch."
+      - name: Print a message for non-master branches
+        if: github.ref != 'refs/heads/master'
+        run: echo "This is not the master branch."
       - name: Run tests
         run: npm test
       - name: Debug message
@@ -52,11 +52,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-      - name: Print a message for main branch
-        if: github.ref == 'refs/heads/main'
-        run: echo "This is the main branch."
+      - name: Print a message for master branch
+        if: github.ref == 'refs/heads/master'
+        run: echo "This is the master branch."
       - name: Print a message for non-main branches
-        if: github.ref != 'refs/heads/main'
+        if: github.ref != 'refs/heads/master'
         run: echo "This is not the main branch."
       - name: Run tests
         run: npm test
